// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CCallout customize 1`] = `
<div>
  <div
    class="callout callout-primary bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CCallout component 1`] = `
<div>
  <div
    class="callout"
  >
    Test
  </div>
</div>
`;
